change to a cuter uincorn emoji and fix text alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,9 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  h1 {
+    text-align: center;
+  }
 }
 
 .gallery {
